--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   line-height: 1.6;
   color: #333;
   overflow-x: hidden;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #ee7752, #a06e81, #23a6d5, #568b7f);
   background-size: 400% 400%;
   animation: gradientShift 15s ease infinite;
 }
